[package]
authors = ['Anagolay Developers']
repository = 'https://github.com/anagolay/anagolay-chain/'
homepage = 'https://anagolay.network/pallet/operations'
edition = '2018'
license-file = "./LICENSE"
name = 'operations'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = [
  "derive",
] }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", optional = true }

anagolay-support = { path = '../anagolay-support', default-features = false }
serde = { version = '1.0', features = ['derive'], optional = true }

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking/std",
  "anagolay-support/std",
  "serde",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
]

runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "anagolay-support/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime", "anagolay-support/try-runtime"]
