[package]
authors = ['Anagolay Developers']
repository = 'https://github.com/anagolay/anagolay-chain/'
homepage = 'https://anagolay.network/pallet/poe'
edition = '2018'
license-file = "./LICENSE"
name = 'poe'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = [
  "derive",
] }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", optional = true }

anagolay-support = { path = '../anagolay-support', default-features = false }
operations = { path = '../operations', default-features = false }
workflows = { path = '../workflows', default-features = false }
verification = { path = '../verification', default-features = false }

serde = { version = '1.0', features = ['derive'], optional = true }

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking/std",
  "anagolay-support/std",
  "operations/std",
  "workflows/std",
  "serde",
]

runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "anagolay-support/runtime-benchmarks",
  "operations/runtime-benchmarks",
  "workflows/runtime-benchmarks",
  "verification/runtime-benchmarks",
]
try-runtime = [
  "frame-support/try-runtime",
  "anagolay-support/try-runtime",
  "operations/try-runtime",
  "workflows/try-runtime",
  "verification/try-runtime",
]
