[package]
authors = ['did:substrate:GHm6gp6khjcxQvnbnSsHdYejsFK1nNVxcGyGAsbDfsymtLr']
repository = 'https://gitlab.com/anagolay/anagolay/'
homepage = 'https://anagolay.network/pallet/workflows'
edition = '2018'
license-file = "./LICENSE"
name = 'workflows'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
std = [
  'codec/std',
  'frame-benchmarking/std',
  'frame-support/std',
  'frame-system/std',
  'sp-core/std',
  'sp-runtime/std',
  'sp-std/std',
  "sp-io/std",
  "anagolay-support/std",
]
runtime-benchmarks = [
  'frame-benchmarking',
  'frame-support/runtime-benchmarks',
  'frame-system/runtime-benchmarks',
]

[dev-dependencies]
serde = { version = "1.0" }

[dependencies]
codec = { version = '2.1', default-features = false, features = [
  'derive',
], package = 'parity-scale-codec' }
frame-support = { version = '3.0', default-features = false }
frame-system = { version = '3.0', default-features = false }
frame-benchmarking = { version = '3.0', default-features = false, optional = true }
sp-core = { version = '3.0', default-features = false }
sp-io = { version = '3.0', default-features = false }
sp-runtime = { version = '3.0', default-features = false }
sp-std = { version = '3.0', default-features = false }

anagolay-support = { path = '../anagolay-support', default-features = false }
