[package]
authors = ['Anagolay Developers']
repository = 'https://github.com/anagolay/anagolay-chain/'
homepage = 'https://anagolay.network/pallet/verification'
edition = '2018'
license-file = "./LICENSE"
name = 'verification-rpc'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
] }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }

jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }

sp-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.32', default-features = false }
sp-blockchain = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.32', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.32', default-features = false }
sp-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.32', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.32', default-features = false }

verification-rpc-runtime-api = { default-features = false, path = 'runtime-api' }

verification = { path = '..', default-features = false }
