[package]
authors = ['Anagolay Developers']
repository = 'https://github.com/anagolay/anagolay-chain/'
homepage = 'https://anagolay.network/pallet/operations'
edition = '2018'
license-file = "./LICENSE"
name = 'operations-rpc-runtime-api'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
    "derive",
] }

frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }

sp-api = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.32', default-features = false }

anagolay-support = { path = '../../../anagolay-support', default-features = false }
operations = { path = '../..', default-features = false }

[features]
default = ["std"]
std = [
    'codec/std',
    'sp-api/std',
    'sp-runtime/std',
    'anagolay-support/std',
    'operations/std',
]
